<resources>
    <string name="app_name">to do list_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    //=======================================
    //strings do fragment: fragment_cad_tarefa
    <string name="msgTitulo">Escreva um titulo para sua Tarefa!!!</string>
    <string name="msgDescTarefa">Escreva um descrição para sua Tarefa!!!</string>
    <string name="msgData">Escolha uma Data para sua Tarefa!!!</string>
    <string name="msgTituloAndDesc">Escreva um titulo e descrição para sua Tarefa!!!</string>
    <string name="msgTituloAndData">Escreva um titulo e escolha uma data para sua Tarefa!!!</string>
    <string name="msgAndDesc">Escreva um titulo e descrição para sua Tarefa!!!</string>
    <string name="msgDataAndDesc">Escreva uma descrição e escolha uma data para sua Tarefa!!!</string>
    <string name="titulo">Titulo:</string>
    <string name="desc">Descrição:</string>
    <string name="data">Data:</string>
    <string name="dataBt">selecionar a data</string>
    <string name="salvar">Salvar tarefa</string>

    //strings do fragment: adapter_tarefa
    <string name="nameTarefa">Tarefa</string>
    <string name="dteConclusaoTarefa">--/--/--</string>
    <string name="statusTarefa">status da tarefa</string>

    //strings do fragment: fragment_detalhe_tarefa
    <string name="dataDe">Data prevista:</string>
    <string name="tituloDe">Titulo da Tarefa:</string>
    <string name="descDe">Descrição:</string>

    //strings do fragment: fragment_cad_sub_Tarefa
    <string name="tituloTarefa"></string>
    <string name="textViewTitle">Sub-Tarefa:</string>
    <string name="textEdTitle">Escreva uma sub-Tarefa desta tarefa.</string>

</resources>