<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CadTarefaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingTop="100dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/titulo"
            android:textSize="25dp"
            android:textColor="@color/white" />





        <EditText
            android:id="@+id/edTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#555454"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"

            />






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc"
            android:textSize="25dp"

            android:textColor="@color/white"



            />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="3dp"

            >
            <EditText
                android:id="@+id/edDescTarefa"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="100dp"
                android:background="#555454"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/data"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:background="@color/black"
                android:textSize="25dp"

                />
        </LinearLayout>
        <Button
            android:id="@+id/btData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataBt"
            android:layout_marginHorizontal="10dp"


            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:layout_marginHorizontal="10dp"


                />
        </LinearLayout>





    </LinearLayout>


</FrameLayout>