<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:id="@+id/cardview_adapter_tarefa"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0C6C6"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#16000000"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#4C618F"
                android:padding="10dp"

                >

                <TextView
                    android:id="@+id/tarefaNametxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nameTarefa"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/dtaConclusaotxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dteConclusaoTarefa"
                    android:padding="10dp"
                    android:textColor="@color/white"

                    />
                <TextView
                    android:id="@+id/StatusTarefatxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statusTarefa"
                    android:background="#A7A5A5"
                    android:textColor="@color/white"
                    android:padding="6dp"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>






</androidx.cardview.widget.CardView>