<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CadSubTarefaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/textViewTitle"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:background="#FFFFFF"
            android:layout_marginHorizontal="10dp"


            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/textViewTitle"
            android:textColor="#FFFFFF"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/textEdTitle"
            android:background="#555454"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:background="@color/black"
            >

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <ImageView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/white"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            />




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>