<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DetalheTarefaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingTop="30dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tituloDe"
            android:textColor="@color/white" />





        <TextView
            android:id="@+id/tvContenTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#555454"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"

            />






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/dataDe"


            />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"

            >
            <TextView
                android:id="@+id/tvContentdataPrev"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:background="#555454"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/white" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/descDe"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <TextView
            android:id="@+id/tvContentDesc"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#555454"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTarefas"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btaddSubTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="#FFFFFF"

        />


</androidx.constraintlayout.widget.ConstraintLayout>